[package]
name = "rustsocket"
version = "0.1.0"
authors = ["Andrew Wheeler <lordsatin@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
mio = { version = "0.7", features = ["os-poll", "tcp"] }
libc = "0.2"

[lib]
crate-type = ["cdylib"]
